--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.12'
+        cache:  'pip2'
+      
 
     - name: Install dependencies
       run: |
