--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         wget -N https://chromedriver.storage.googleapis.com/113.0.5672.63/chromedriver_linux64.zip
         unzip chromedriver_linux64.zip
         sudo mv -f chromedriver /usr/local/share/chromedriver
-        sudo ln -s /usr/local/share/chromedriver /usr/local/bin/chromedriver
+        if [ -L /usr/bin/chromedriver ]; then sudo rm /usr/bin/chromedriver; fi
         sudo ln -s /usr/local/share/chromedriver /usr/bin/chromedriver
         python -m venv .venv
         source .venv/bin/activate
