--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -15,6 +15,8 @@ jobs:
         image: selenium/standalone-chrome
         ports:
           - 4444:4444
+        options: >-
+          --shm-size=2g
 
     steps:
     - name: Checkout code
@@ -32,43 +34,26 @@ jobs:
         pip install robotframework
         pip install robotframework-seleniumlibrary
 
-    - name: Run test_login_negative
+    - name: Run test_cart
       run: |
-        robot -v BROWSER:chrome -v SELENIUM:localhost:4444/wd/hub tests/login_negative_1.robot
-    
-    - name: Run test_login_positive
+        robot -v BROWSER:chrome -v SELENIUM:localhost:4444/wd/hub -v OPTIONS:"--headless --no-sandbox --disable-dev-shm-usage" tests/test_cart.robot
+
+    - name: Run test_filter_page
       run: |
-        robot -v BROWSER:chrome -v SELENIUM:localhost:4444/wd/hub tests/login_positive.robot
-    
+        robot -v BROWSER:chrome -v SELENIUM:localhost:4444/wd/hub -v OPTIONS:"--headless --no-sandbox --disable-dev-shm-usage" tests/test_filter_page.robot
+
+    - name: Run test_login
+      run: |
+        robot -v BROWSER:chrome -v SELENIUM:localhost:4444/wd/hub -v OPTIONS:"--headless --no-sandbox --disable-dev-shm-usage" tests/test_login.robot
+
     - name: Run test_menu_items
       run: |
-        robot -v BROWSER:chrome -v SELENIUM:localhost:4444/wd/hub tests/menu_items.robot
+        robot -v BROWSER:chrome -v SELENIUM:localhost:4444/wd/hub -v OPTIONS:"--headless --no-sandbox --disable-dev-shm-usage" tests/test_menu_items.robot
+
+    - name: Run test_product_card
+      run: |
+        robot -v BROWSER:chrome -v SELENIUM:localhost:4444/wd/hub -v OPTIONS:"--headless --no-sandbox --disable-dev-shm-usage" tests/test_product_card.robot
 
     - name: Run test_search_field
       run: |
-        robot -v BROWSER:chrome -v SELENIUM:localhost:4444/wd/hub tests/search_field.robot
-   
-   
-    - name: Run test_product_card
-      run: |
-        robot -v BROWSER:chrome -v SELENIUM:localhost:4444/wd/hub tests/product_card.robot
-   
-    - name: Run test_filter_page
-      run: |
-          robot -v BROWSER:chrome -v SELENIUM:localhost:4444/wd/hub tests/filter_page.robot
-   
-    - name: Run test_cart
-      run: |
-        robot -v BROWSER:chrome -v SELENIUM:localhost:4444/wd/hub tests/cart.robot
-
-    - name: Run complex_test
-      run: |
-        robot -v BROWSER:chrome -v SELENIUM:localhost:4444/wd/hub tests/complex_test.robot
-
-
-
-
- 
-
-
-
+        robot -v BROWSER:chrome -v SELENIUM:localhost:4444/wd/hub -v OPTIONS:"--headless --no-sandbox --disable-dev-shm-usage" tests/test_search_field.robot
