--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -33,12 +33,14 @@ jobs:
         pip install -r requirements.txt
         pip install robotframework
         pip install robotframework-seleniumlibrary
-    
+
     - name: Wait for Selenium to be ready
-      run: sleep 10
-    
+      run: sleep 15
+
     - name: Run complex_test
       run: |
-        robot -v BROWSER:chrome -v SELENIUM:localhost:4444/wd/hub -v OPTIONS:"--headless --no-sandbox --disable-dev-shm-usage" tests/complex_test.robot
+        robot --variable BROWSER:chrome --variable REMOTE_URL:http://localhost:4444/wd/hub --variable HEADLESS:--headless --variable NO_SANDBOX:--no-sandbox --variable DISABLE_DEV_SHM:--disable-dev-shm-usage tests/complex_test.robot
+    
 
+    
 
