--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -21,6 +21,12 @@ jobs:
     steps:
 
     - uses: browser-actions/setup-chrome@v1
+      with:
+        chrome-version: 120
+        install-chromedriver: true
+    
+    
+    - uses: browser-actions/setup-chrome@v1
     - run: chrome --version
     
     - name: Checkout code
@@ -39,11 +45,11 @@ jobs:
         pip install robotframework-seleniumlibrary
 
     - name: Wait for Selenium to be ready
-      run: sleep 15
+      run: sleep 5
 
     - name: Run complex_test
       run: |
-        robot --variable BROWSER:chrome --variable REMOTE_URL:http://localhost:4444/wd/hub --variable HEADLESS:--headless --variable NO_SANDBOX:--no-sandbox --variable DISABLE_DEV_SHM:--disable-dev-shm-usage tests/complex_test.robot
+        robot  tests/complex_test.robot
     
 
     
