--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -1,4 +1,4 @@
-name: Run Robot Framework Tests
+name: Python application
 
 on:
   push:
@@ -7,50 +7,33 @@ on:
     branches: [ main ]
 
 jobs:
-  run-tests:
+  build:
+
     runs-on: ubuntu-latest
 
-    services:
-      selenium:
-        image: selenium/standalone-chrome
-        ports:
-          - 4444:4444
-        options: >-
-          --shm-size=2g
-
     steps:
-
-    - uses: browser-actions/setup-chrome@v1
-      with:
-        chrome-version: 126
-        install-chromedriver: true
-    
-    
-    - uses: browser-actions/setup-chrome@v1
-    - run: chrome --version
-    
-    - name: Checkout code
-      uses: actions/checkout@v2
-
+    - uses: actions/checkout@v2
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
+    - uses: browser-actions/setup-chrome@v1
+      with:
+        chrome-version: 126
+        install-chromedriver: true
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install robotframework
-        pip install robotframework-seleniumlibrary
 
-    - name: Wait for Selenium to be ready
-      run: sleep 5
-
-    - name: Run complex_test
+    - name: Run tests
       run: |
-        robot  tests/complex_test.robot
-    
+        pytest
+
+
+
+
 
     
 
