--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -13,13 +13,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-    - uses: browser-actions/setup-chrome@v1
+        
+    - name: Set up Chrome
+      uses: browser-actions/setup-chrome@v1
       with:
-        chrome-version: 126
+        chrome-version: 'latest'
         install-chromedriver: true
 
     - name: Install dependencies
@@ -27,7 +30,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-
+    - name: Run complex test
+      run: |
+        robot --variable BROWSER:chrome --variable REMOTE_URL:http://localhost:4444/wd/hub tests/complex_test.robot
 
 
 
