--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,4 +28,4 @@ jobs:
     - name: Run Robot Framework tests
       run: |
         source .venv/bin/activate
-        HEADLESS=True robot --variable HEADLESS:True --variable BROWSER:chrome tests/test_suite.robot
+        HEADLESS=True robot --variable HEADLESS:True --variable BROWSER:chrome tests/
